# fusionaize-docs

./: .cliff.toml  .gitignore  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bak  README.md  README.md.bak  mkdocs.yml  pyproject.toml  pyproject.toml.bak  requirements.txt
.devcontainer/: devcontainer.json  devcontainer.json.bak
.forgejo/workflows/: ci.yml  deploy.yml  mirror.yml
.github/workflows/: automerge.yml  ci.yml  codeql.yml  notify-tap.yml  publish-dry-run.yml  release-artifacts.yml
docs/: index.md
docs/about/: brand.md  capacium.md  open-core.md  platform.md  roadmap.md  vision.md
docs/architecture/: deployment.md  index.md  security.md  stack.md
docs/assets/: brand-colors.css
docs/audiences/: agency.md  education.md  enterprise.md  freelancer.md  innovation-lab.md  research.md  sme.md
docs/compliance/: eu-ai-act.md  gdpr.md  security.md  sovereignty.md
docs/contributing/: index.md
docs/getting-started/: config.md  index.md  install.md
docs/legal/: license.md  privacy.md
docs/products/: index.md
docs/products/fabric/: index.md
docs/products/gate/: index.md
docs/products/grid/: index.md
docs/products/lens/: index.md
docs/products/os/: index.md
docs/products/sdk/: index.md
docs/products/signal/: index.md
docs/products/studio/: index.md
fusionaize_docs/: __init__.py  cli.py  cli.py.bak  config_cli.py  cost.py  dashboard.py  lane_registry.py  local_discovery.py  main.py  main.py.bak  metrics.py  provider_catalog.py  router.py
fusionaize_docs/api/anthropic/: __init__.py  routes.py
tests/: test_adaptation.py  test_api_hardening.py  test_main_cli.py  test_provider_catalog.py  test_providers.py  test_release_scripts.py  test_version.py
