[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionaize-docs"
version = "0.1.1"
description = "Documentation and knowledge base for the fusionAIze stack."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["fusionaize", "docs", "documentation", "knowledge-base", "help"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0.0",
    "httpx",  # for TestClient
    "ruff>=0.8",
    "twine>=6.1",
    "pre-commit>=3.0",
    "bandit[toml]>=1.8.0",
    "jinja2>=3.1.0",
]

[project.scripts]
fusionaize-docs = "fusionaize_docs.main:main"
fusionaize-docs-stats = "fusionaize_docs.cli:main"

[project.urls]
Homepage = "https://github.com/fusionAIze/fusionaize-docs"
Repository = "https://github.com/fusionAIze/fusionaize-docs"
Issues = "https://github.com/fusionAIze/fusionaize-docs/issues"
Documentation = "https://github.com/fusionAIze/fusionaize-docs#readme"

[tool.setuptools.packages.find]
include = ["fusionaize-docs*"]

[tool.setuptools.package-data]
fusionaize-docs = [
    "vendor/*.js",
    "vendor/*.css",
    "assets/brand/*.svg",
    "assets/fonts/Montserrat/*.ttf",
    "assets/fonts/Open-Sans/*.ttf",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
